fix: align submission type icon to the center

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -1097,6 +1097,7 @@ cds-accordion-item[open]:not([disabled])::part(content) ,:host(cds-accordion-ite
 .sp-1 {
   display: flex;
   gap: 1rem;
+  align-items: center;
 }
 .mg-tl-2 {
   margin-top: 2rem;
